fixed section title styles, rearranged section for resume on small devices

--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,7 +2,6 @@
 
 .aboutSection {
     display: inline;
-    color: map-get($colors, secondary);
 
     @media only screen and (max-width:767px) {
         font-size: map-get($font-size, sm);
