--- a/src/pages/Literature/Literature.scss
+++ b/src/pages/Literature/Literature.scss
@@ -1,9 +1,5 @@
 @import '../../scss/shared.scss';
 
-.section {
-    color: map-get($colors, secondary);
-}
-
 .fafImage {
     padding: 1rem 0;
     width: 10vw;
