--- a/src/pages/Resume/Resume.scss
+++ b/src/pages/Resume/Resume.scss
@@ -1,9 +1,5 @@
 @import '../../scss/shared.scss';
 
-.section {
-    color: map-get($colors, secondary);
-}
-
 .resumePage {
     @include flexbox(row);
     
